--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javier Mercedes's portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "node-sass -w scss/ -o public/css/ --recursive"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/KiritoXD01/portafolio/issues"
   },
-  "homepage": "https://github.com/KiritoXD01/portafolio#readme"
+  "homepage": "https://github.com/KiritoXD01/portafolio#readme",
+  "dependencies": {
+    "node-sass": "^4.14.1"
+  }
 }
